# pyrail-cli

./: README.md  example.env  pyproject.toml
app/: main.py
app/components/: DeparturesInfo.py  DeparturesTable.py  __init__.py
app/components/shared/: art.py
app/locales/: locales.py
app/service/: DepartureManager.py  environment.py
cli/handlers/: pyrail.py
